fix(header): Spacing under header
Ref.: #9

--- a/local_packages/corporate/Resources/Public/src/scss/partials/_breadcrumb.scss
+++ b/local_packages/corporate/Resources/Public/src/scss/partials/_breadcrumb.scss
@@ -1,6 +1,6 @@
 .base-breadcrumb {
   width: 100%;
-  margin: $spacing-md 0;
+  margin: $spacing-lg 0;
 
   .breadcrumb {
     height: 100%;
