--- a/local_packages/corporate/Resources/Public/src/scss/partials/_header.scss
+++ b/local_packages/corporate/Resources/Public/src/scss/partials/_header.scss
@@ -47,7 +47,7 @@
 
 
 .base-header__spacing{
-  height: $spacing-lg;
+  height: 8rem;
   background-color: $color-light;
   width: 100%;
 }
